[build-system]
requires = ["setuptools", "wheel", "pybind11", "pybind11-stubgen"]
build-backend = "setuptools.build_meta"

[project]
name = "PyCGraph"
dynamic = ["version", "description", "authors", "license", "readme", "requires-python", "keywords", "classifiers"]

dependencies = [
    "pybind11",
    "pybind11-stubgen"
]

[tool.setuptools]
package-dir = {"" = "."}
